--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,9 @@
 [project]
 name = "utils-3d"
 version = "0.1.0"
+requires-python = ">=3.10"
+dependencies = ["vtk>=9.2"]
+
 
 [build-system]
 requires = ["setuptools"]
@@ -12,5 +15,11 @@ python_files = ["test_*.py"]
 python_functions = ["test_*"]
 addopts = "-ra"
 
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
 [project.scripts]
-utils-3d = "src.cli:main"
+utils-3d = "cli:main"
